# matplotlib-latex-config

./: .gitignore  README.md  pyproject.toml
examples/: with_latex_custom.py  with_latex_default.py  without_latex.py
src/Matplotlib_LaTeX_Config.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/mplconfig/: __init__.py  plot_setup.py
