# pyproject.toml

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "matplotlib-latex-config"
version = "1.0.0"
authors = [
  { name="YuanFeng Shi", email="gaiussheh@gmail.com" },
]
description = "A personal, highly configurable plotting style package for Matplotlib with advanced LaTeX support."
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Framework :: Matplotlib",
]
dependencies = [
    "matplotlib>=3.5", # Your package depends on matplotlib
]